[package]
name = "knoll-silence-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "knoll_silence"
path = "src/lib.rs"

[[bin]]
name = "knoll"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.5", features = ["derive"] }
chrono      = "0.4"

# social-simulation framework (socsim) — ABM のエンジン基盤．Knoll & van Dick (2013)
# の 4 動機サイレンスモデルは Watts–Strogatz 小世界ネットワーク上の LLM 駆動エージェント
# (Track B Phase B2) と多項ロジスティック ablation (Track B Phase B1) を排他的に切替える．
# 具体的 commit は Cargo.lock で固定．
socsim-core       = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine     = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
socsim-net        = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-net" }
socsim-mechanisms = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-mechanisms" }
socsim-metrics    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-metrics" }
socsim-llm        = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-llm", features = ["live"] }
# 出力ヘルパ (timestamp / run-dir / latest symlink / CSV・JSON writer)．
socsim-results    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-results" }
