[project]
name = "knoll-tools"
version = "0.1.0"
description = "Knoll & van Dick (2013) four-form employee silence — visualization, survey analysis, and reproduction tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "socsim-tools",
    # Track A psychometric tooling. Available in Phase A3+; safe to install
    # even without real survey data because the survey-loader synthesise
    # path keeps these optional from the smoke tests.
    "factor-analyzer>=0.5",
    "semopy>=2.3",
    "pingouin>=0.5",
]

[project.scripts]
knoll-tools = "knoll_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knoll_tools"]
